# pratheek-evaluate-gpu-queue

./: CMakeLists.txt  Makefile  README.md  main.cpp
kernels/: barrier.h  barrier_init.cl  lcrq_init.cl  lcrqueue32.h  lcrqueue32_host.h  queue_dispatch.cl  queue_lcrq32.cl  queue_ms.cl  queue_sfq.cl  queue_test_generic.cl  queue_tz.cl  tzqueue.h
